企画詳細と参加者専用画面に戻るボタンを追加

--- a/mahjongtournamentmanager.client/src/app/tournament-detail.component.html
+++ b/mahjongtournamentmanager.client/src/app/tournament-detail.component.html
@@ -1,5 +1,9 @@
 <div class="mahjong-background">
   <div *ngIf="tournament" class="tournament-detail-container">
+    <div class="navigation-header">
+      <button routerLink="/event-list" class="back-button">＜ 戻る</button>
+    </div>
+
     <div class="mahjong-tile tournament-title">
       <h2>{{ tournament.tournamentName }}</h2>
     </div>
