--- a/mahjongtournamentmanager.client/src/app/authenticated-layout/authenticated-layout.component.html
+++ b/mahjongtournamentmanager.client/src/app/authenticated-layout/authenticated-layout.component.html
@@ -1,28 +1,21 @@
-<nav class="navbar navbar-expand-sm navbar-toggleable-sm navbar-light bg-white border-bottom box-shadow mb-3 container-fluid">
-  <div class="navbar-content d-flex justify-content-between align-items-center w-100">
-    <a class="navbar-brand" [routerLink]="['/']">
+<nav class="navbar navbar-expand-lg navbar-light bg-white border-bottom box-shadow mb-3">
+  <div class="container-fluid">
+    <a class="navbar-brand" [routerLink]="['/']" (click)="isMenuCollapsed = true">
       <img src="assets/icons/ycb_logo.svg" alt="YCBチャンネル" style="height: 32px;">
     </a>
-    
-    
-    <div
-      class="navbar-collapse collapse d-sm-inline-flex justify-content-end"
-      [ngClass]="{ show: isExpanded }"
-    >
-      <ul class="navbar-nav flex-grow">
-        
-        <li class="nav-item" [routerLinkActive]="['link-active']">
-          <a class="nav-link text-dark" [routerLink]="['/events']"
-            >イベント一覧</a
-          >
+    <button class="navbar-toggler" type="button" (click)="isMenuCollapsed = !isMenuCollapsed" [attr.aria-expanded]="!isMenuCollapsed" aria-controls="navbarNav">
+      <span class="navbar-toggler-icon"></span>
+    </button>
+    <div class="collapse navbar-collapse" [class.show]="!isMenuCollapsed" id="navbarNav">
+      <ul class="navbar-nav ms-auto">
+        <li class="nav-item" [routerLinkActive]="'link-active'">
+          <a class="nav-link" [routerLink]="['/events']" (click)="isMenuCollapsed = true">イベント一覧</a>
         </li>
-        <li class="nav-item" [routerLinkActive]="['link-active']" *ngIf="authService.hasRole('Admin')">
-          <a class="nav-link text-dark" [routerLink]="['/create-event']"
-            >企画作成</a
-          >
+        <li class="nav-item" [routerLinkActive]="'link-active'" *ngIf="authService.hasRole('Admin')">
+          <a class="nav-link" [routerLink]="['/create-event']" (click)="isMenuCollapsed = true">企画作成</a>
         </li>
         <li class="nav-item">
-          <a class="nav-link text-dark" (click)="logout()">ログアウト</a>
+          <a class="nav-link" (click)="logout()">ログアウト</a>
         </li>
       </ul>
     </div>
